[package]
name = "proof_site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3", default-features = true }
tower-http = { version = "0.4", features = ["fs"] }
